examples/test/testpolicy15104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15104
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key18: value17
      key1: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value28
          key37: value25
      podSelector:
        matchLabels:
          key33: value19
